# Desafios

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/worflows/: test.yaml
desafios/date_and_time/: string_to_.py
desafios/karnaugh/: map_karnaugh.py
desafios/math/: matrices.py
desafios/paginator/: generate.py
tests/src/math/: test_matrices.py
